--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,10 @@ jobs:
           name: Install Carthage
           command: brew upgrade carthage
 
+      - run:
+          name: Install Carthage
+          command: carthage bootstrap --platform ios --no-use-binaries
+
       # Build the app and run tests
       - run:
           name: Build and run tests
