--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,7 @@ jobs:
       # and save the same XML files under test-results folder
       # in the Artifacts tab
       - store_test_results:
-          path: test_output/report.xml
+           path: "./fastlane/test_output"
       - store_artifacts:
           path: /tmp/test-results
           destination: scan-test-results
